feat: Spotify-related server handling